# grampa

./: .pre-commit-config.yaml  README.md  magneticfieldmodel.ipynb  magneticfieldmodel.py  pyproject.toml
examples/: example_cluster_Bfield.ipynb  magneticfieldmodel_old.ipynb
grampa/: magneticfieldmodel.py  magneticfieldmodel_old.py  magneticfieldmodel_utils.py
src/grampa/: __version.py  magneticfieldmodel.py  magneticfieldmodel_utils.py
tests/: test_magneticfieldmodel.py
